--- a/ASSH/Kiosk/HelpPageViewController.xib
+++ b/ASSH/Kiosk/HelpPageViewController.xib
@@ -39,7 +39,7 @@
 					<object class="IBUIImageView" id="360418237">
 						<reference key="NSNextResponder" ref="5026745"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{589, 457}</string>
+						<string key="NSFrameSize">{700, 577}</string>
 						<reference key="NSSuperview" ref="5026745"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -47,7 +47,7 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{589, 493}</string>
+				<string key="NSFrameSize">{700, 577}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -103,6 +103,22 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="5026745"/>
 						<array class="NSMutableArray" key="children">
+							<object class="IBNSLayoutConstraint" id="357763153">
+								<reference key="firstItem" ref="360418237"/>
+								<int key="firstAttribute">4</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="5026745"/>
+								<int key="secondAttribute">4</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">0.0</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="5026745"/>
+								<int key="scoringType">8</int>
+								<float key="scoringTypeFloat">29</float>
+								<int key="contentType">3</int>
+							</object>
 							<object class="IBNSLayoutConstraint" id="565759260">
 								<reference key="firstItem" ref="360418237"/>
 								<int key="firstAttribute">3</int>
@@ -158,24 +174,7 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">31</int>
 						<reference key="object" ref="360418237"/>
-						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="75251584">
-								<reference key="firstItem" ref="360418237"/>
-								<int key="firstAttribute">8</int>
-								<int key="relation">0</int>
-								<nil key="secondItem"/>
-								<int key="secondAttribute">0</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">457</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="360418237"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">1</int>
-							</object>
-						</array>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="5026745"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -194,9 +193,9 @@
 						<reference key="parent" ref="5026745"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">44</int>
-						<reference key="object" ref="75251584"/>
-						<reference key="parent" ref="360418237"/>
+						<int key="objectID">47</int>
+						<reference key="object" ref="357763153"/>
+						<reference key="parent" ref="5026745"/>
 					</object>
 				</array>
 			</object>
@@ -206,26 +205,24 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array class="NSMutableArray" key="31.IBViewMetadataConstraints">
-					<reference ref="75251584"/>
-				</array>
 				<boolean value="NO" key="31.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="37.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="38.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array class="NSMutableArray" key="4.IBViewMetadataConstraints">
+				<array key="4.IBViewMetadataConstraints">
 					<reference ref="411419688"/>
 					<reference ref="420648189"/>
 					<reference ref="565759260"/>
+					<reference ref="357763153"/>
 				</array>
 				<string key="43.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="44.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="47.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">44</int>
+			<int key="maxID">47</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
