List popover issue resolved

--- a/ASSH/Kiosk/ListPopoverViewController.xib
+++ b/ASSH/Kiosk/ListPopoverViewController.xib
@@ -38,7 +38,7 @@
 					<object class="IBUITableView" id="218189218">
 						<reference key="NSNextResponder" ref="766721923"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{362, 1004}</string>
+						<string key="NSFrameSize">{450, 910}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -60,6 +60,7 @@
 				<string key="NSFrame">{{0, 20}, {768, 1004}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="218189218"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
